<resources>
    <string name="labelApp" translatable="false">Kõnele</string>
    <string name="labelComboListItem" translatable="false">• %2$s · %1$s</string>
    <string name="labelComboItem" translatable="false">%2$s · %1$s</string>
    <string name="labelSpeechInputViewMessage" translatable="false">[ %1$s ]</string>
    <string name="middot" translatable="false">·</string>
    <string name="descriptionApp" translatable="false">speech-to-text services for Android apps</string>
    <string name="labelIme">Kõnele speak &amp; swipe</string>
    <string name="labelRecognitionServiceHttp">Kõnele (grammar support)</string>
    <string name="labelRecognitionServiceWs">Kõnele (fast recognition)</string>
    <string name="labelRecognitionServiceWs2">Kõnele (fast recognition 2)</string>
    <string name="labelRecognitionServiceDemo" translatable="false">Kõnele (DEMO)</string>
    <string name="labelActivityRecognizerIntent">@string/labelApp</string>
    <string name="labelActivityAbout">About Kõnele</string>
    <string name="labelActivityPreferences">Kõnele settings</string>
    <string name="labelActivityPreferencesRecognitionServiceHttp">@string/labelRecognitionServiceHttp</string>
    <string name="labelActivityPreferencesRecognitionServiceWs">@string/labelRecognitionServiceWs</string>
    <string name="labelActivityRewritesLoader">Kõnele rewrite rules</string>
    <string name="labelActivityRewritesSelector">Rewrite rule tables</string>
    <string name="labelActivityAppList">Apps</string>
    <string name="labelActivityGrammarList">Grammars</string>
    <string name="labelActivityServerList">Recognizer servers</string>
    <string name="labelActivitySimpleDemo">Simple demo</string>
    <string name="labelActivityExtrasDemo">Extras demo</string>
    <string name="labelActivityHandsfreeDemo">Handsfree demo</string>
    <string name="labelActivityChatDemo">Chat demo</string>
    <string name="labelActivityVoiceSearchDemo">Voice search demo</string>
    <string name="labelActivityEncoderDemo">Android form demo</string>
    <string name="labelActivityFormDemo">HTML form demo</string>
    <string name="labelActivityQuickSettings">Quick settings</string>
    <string name="labelRewritesName">Save the rewrites table as:</string>
    <string name="labelRewritesChooser">or overwrite an existing table:</string>
    <string name="labelRewritesShare">Share the rewrites table</string>
    <string name="hintSearch">Search</string>
    <string name="labelSearch">Search"</string>
    <string name="titleSearchRewrites">Filter rewrites</string>
    <string name="hintName">name</string>
    <string name="hintLocalServer" translatable="false">10.0.0.2</string>
    <string name="titleDefaultServiceHttp">Server URL</string>
    <string name="titleCategoryUi">Voice search panel</string>
    <string name="titleCategoryDependencies">Dependencies</string>
    <string name="titleCategoryIme">Speak &amp; swipe keyboard</string>
    <string name="titleCategoryDevel">For developers</string>
    <string name="titleCategoryDemos">Demos, tests, etc.</string>
    <string name="titleServices">Recognition services</string>
    <string name="summaryServices">List of installed recognition services with links to their settings panels</string>
    <string name="summaryServiceHttp">Service based on the Ruby PocketSphinx GStreamer server. The server URL can be changed. The default server supports Estonian and Grammatical Framework.</string>
    <string name="summaryServiceWs">Service based on the Kaldi GStreamer server. The server URL can be changed. The default server supports Estonian and fast/accurate recognition.</string>
    <string name="titleScreenDevel">Developer settings, demos, tools</string>
    <string name="titleAutoStart">Auto start</string>
    <string name="summaryAutoStart">Start recording automatically</string>
    <string name="titleAutoStopAfterPause">Auto stop after pause</string>
    <string name="summaryAutoStopAfterPause">Stop recording after a few seconds of pause</string>
    <string name="titleAutoStopAfterTime">Max recording time</string>
    <string name="summaryAutoStopAfterTime">Stop recording after %1$s seconds</string>
    <string name="titleImeMode">Swiping</string>
    <string name="titleImeShowPartialResults">Partial results</string>
    <string name="summaryImeShowPartialResults">Show partial recognition results in the text field</string>
    <string name="titleRespectLocale">Support device language</string>
    <string name="summaryRespectLocale">Assume that the input speech is in the device\'s default language,
        unless the app sets a different language</string>
    <string name="titleRecordingRate">Sample rate</string>
    <string name="summaryRecordingRate">Sampling %1$s times per second</string>
    <string name="titleAudioFormat">Audio format</string>
    <string name="summaryAudioFormat">%1$s\n(Using a non-raw format results in 2x less network traffic. Might not work on all devices.)</string>
    <string name="titleAudioCues">Play audio cues</string>
    <string name="summaryAudioCues">Beep before and after recording</string>
    <string name="titleWsServer">Server URL</string>
    <string name="summaryWsServer" translatable="false">%1$s</string>
    <plurals name="summaryWsServerWithStatus">
        <item quantity="one">%d slot available</item>
        <item quantity="other">%d slots available</item>
    </plurals>
    <string name="summaryWsServerWithStatusError" translatable="false">%1$s</string>
    <string name="titleHelpText">Help text</string>
    <string name="summaryHelpText">Show usage instructions by the microphone button. Makes the search panel larger.</string>
    <string name="titleReturnErrors">Return errors</string>
    <string name="summaryReturnErrors">Return network/audio/etc. errors to the caller (useful if the caller does error handling)</string>
    <string name="titleImeHelpText">Help text</string>
    <string name="summaryImeHelpText">Show usage instructions by the microphone button. Makes the keyboard larger.</string>
    <string name="summaryImeCombo">Updating…</string>
    <string name="titleEnableIme">Enable Speak &amp; swipe keyboard</string>
    <string name="summaryEnableIme">The keyboard allows you to dictate into any text field in any app, and navigate and edit the text with swipe operations. Tap here to enable it in the Android virtual keyboard settings.</string>
    <string name="summaryAppList">List of apps where you have used speech input</string>
    <string name="summaryGrammarList">List of GF and JSGF grammars that translate the raw transcription into app-specific language. (Needs service support.)</string>
    <string name="summarySimpleDemo">Demonstrates the simplest way of using the speech recognizer</string>
    <string name="summaryExtrasDemo">Shows only the "result extras" returned by the recognizer</string>
    <string name="summaryHandsfreeDemo">Repeatedly calls the speech recognizer and shows the best transcription. Grammar can be assigned to the input (via menu).</string>
    <string name="summaryChatDemo">Chat-style UI for calling intents</string>
    <string name="summaryVoiceSearchDemo">Forwards the results to a search app</string>
    <string name="summaryEncoderDemo">Android EditTexts of various types for testing the IME</string>
    <string name="summaryFormDemo">HTML form with various types of fields for testing the IME</string>
    <string name="titleCombo">Recognition languages &amp; services</string>
    <string name="dialogTitleCombo">Languages &amp; services</string>
    <string name="titleSystemVoiceInputSettings">Recognition services (system UI)</string>
    <string name="summarySystemVoiceInputSettings">System-wide settings panel for the installed speech recognition services, as well as the Assist app</string>
    <string name="titleSelectRewrites">Rewrites</string>
    <string name="summarySelectRewrites">List of available rewrite rule tables that can be used to rewrite the transcription. (Works with any service.)</string>
    <string name="titleQuickSettings">Quick settings</string>
    <string name="summaryQuickSettings">Quickly apply some common default settings</string>
    <string name="titleGetPutPrefSkipUi">Run GetPutPreference without confirmation</string>
    <string name="summaryGetPutPrefSkipUi">Allow GetPutPreference to change preferences without user confirmation.
    This allows rewrite rules, ADB scripts, or 3rd party apps to change Kõnele settings without
        the user having to confirm the change. Enable this setting only if you know what you are doing.</string>
    <string name="titleMaxHypotheses">Recognition hypotheses</string>
    <string name="summaryMaxHypotheses">Maximum number of returned recognition hypotheses. Depends also on the used service.</string>
    <string name="buttonSpeak">Tap &amp; Speak</string>
    <string name="buttonImeSpeak">Tap &amp; Speak</string>
    <string name="buttonImeStop">Speak now! Tap when finished</string>
    <string name="buttonImeStopByPause">Speak now! Pause when finished</string>
    <string name="buttonYes">Yes</string>
    <string name="buttonNo">No</string>
    <string name="buttonOk">OK</string>
    <string name="buttonGoToSettings">Go to settings</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonApply">Apply</string>
    <string name="buttonScan">Scan</string>
    <string name="buttonUseDefault1">Default 1</string>
    <string name="buttonUseDefault2">Default 2</string>
    <string name="statusImeTranscribing">Still transcribing…</string>
    <string name="statusServerStatus" translatable="false">…</string>
    <string name="dialogTitleChangeGrammarUrl">Change the grammar</string>
    <string name="cmShare">Share as TSV</string>
    <string name="cmSendBase64">Share as base64 URI</string>
    <string name="cmTest">Test</string>
    <string name="cmRename">Rename</string>
    <string name="cmDelete">Delete</string>
    <string name="menuAppsSort">Sort …</string>
    <string name="menuAppsSortByName">by package name</string>
    <string name="menuAppsSortByCount">by usage frequency</string>
    <string name="menuAppsSortByGrammar">by grammar URL</string>
    <string name="labelActivityEncoderListDemo">Audio encoders</string>
    <string name="labelActivityImeListDemo">Voice IMEs</string>
    <string name="cdMicrophone">Press this button and speak</string>
    <string name="cdAppIcon">App icon</string>
    <string name="cdServiceIcon">Service icon</string>
    <string name="cdSettings">Kõnele settings</string>
    <string name="defaultRecordingRate" translatable="false">16000</string>
    <string name="testComboLabel" translatable="false">English (United States) · Kõnele (grammar support)</string>
    <string name="testComboLabels" translatable="false">en-US(Kg) · en-X(G) · et-EE(Kf) · et-EE(Kg) · de-DE (G) · +/-</string>
</resources>