<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/titleScreenDevel">

    <!--
    <Preference
        android:summary="@string/summaryQuickSettings"
        android:title="@string/titleQuickSettings">
        <intent
            android:targetClass="ee.ioc.phon.android.speak.activity.QuickSettingsActivity"
            android:targetPackage="ee.ioc.phon.android.speak" />
    </Preference>
    -->
    <CheckBoxPreference
        android:defaultValue="@bool/defaultGetPutPrefSkipUi"
        android:key="@string/keyGetPutPrefSkipUi"
        android:summary="@string/summaryGetPutPrefSkipUi"
        android:title="@string/titleGetPutPrefSkipUi" />
    <PreferenceCategory android:title="@string/titleCategoryDemos">
        <Preference
            android:summary="@string/summarySimpleDemo"
            android:title="@string/labelActivitySimpleDemo">
            <intent
                android:targetClass="ee.ioc.phon.android.speak.demo.SimpleDemo"
                android:targetPackage="ee.ioc.phon.android.speak" />
        </Preference>
        <Preference
            android:summary="@string/summaryExtrasDemo"
            android:title="@string/labelActivityExtrasDemo">
            <intent
                android:targetClass="ee.ioc.phon.android.speak.demo.ExtrasDemo"
                android:targetPackage="ee.ioc.phon.android.speak" />
        </Preference>
        <Preference
            android:summary="@string/summaryHandsfreeDemo"
            android:title="@string/labelActivityHandsfreeDemo">
            <intent
                android:targetClass="ee.ioc.phon.android.speak.demo.HandsfreeDemoActivity"
                android:targetPackage="ee.ioc.phon.android.speak" />
        </Preference>
        <Preference
            android:summary="@string/summaryChatDemo"
            android:title="@string/labelActivityChatDemo">
            <intent
                android:targetClass="ee.ioc.phon.android.speak.demo.ChatDemoActivity"
                android:targetPackage="ee.ioc.phon.android.speak" />
        </Preference>
        <Preference
            android:summary="@string/summaryVoiceSearchDemo"
            android:title="@string/labelActivityVoiceSearchDemo">
            <intent
                android:targetClass="ee.ioc.phon.android.speak.demo.VoiceSearchDemo"
                android:targetPackage="ee.ioc.phon.android.speak" />
        </Preference>
        <Preference
            android:summary="@string/summaryFormDemo"
            android:title="@string/labelActivityFormDemo">
            <intent
                android:targetClass="ee.ioc.phon.android.speak.demo.FormDemoActivity"
                android:targetPackage="ee.ioc.phon.android.speak" />
        </Preference>
        <Preference
            android:summary="@string/summaryEncoderDemo"
            android:title="@string/labelActivityEncoderDemo">
            <intent
                android:targetClass="ee.ioc.phon.android.speak.demo.EncoderDemoActivity"
                android:targetPackage="ee.ioc.phon.android.speak" />
        </Preference>

        <Preference
            android:summary="@string/labelActivityEncoderListDemo"
            android:title="@string/labelActivityEncoderListDemo">
            <intent
                android:targetClass="ee.ioc.phon.android.speak.demo.EncoderListDemo"
                android:targetPackage="ee.ioc.phon.android.speak" />
        </Preference>

        <Preference
            android:summary="@string/labelActivityImeListDemo"
            android:title="@string/labelActivityImeListDemo">
            <intent
                android:targetClass="ee.ioc.phon.android.speak.demo.ImeListDemo"
                android:targetPackage="ee.ioc.phon.android.speak" />
        </Preference>
        <!-- TODO: localize -->
        <Preference
            android:summary="Switch on if background audio does not stop during recognition"
            android:title="Do Not Disturb access">
            <intent android:action="android.settings.NOTIFICATION_POLICY_ACCESS_SETTINGS" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>