<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="fill"
    android:padding="@dimen/layoutMargin1">

    <ImageView
        android:id="@+id/itemAppIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cdAppIcon"
        android:maxWidth="48dp"
        android:maxHeight="48dp"
        android:scaleType="fitCenter"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/itemAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/itemAppIcon"
        android:layout_toRightOf="@+id/itemAppIcon"
        android:maxLines="1"
        android:text="@string/labelActivityHandsfreeDemo"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/textSize3" />

    <TextView
        android:id="@+id/itemAppFname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemAppName"
        android:layout_toEndOf="@+id/itemAppIcon"
        android:layout_toRightOf="@+id/itemAppIcon"
        android:text="@string/dialogTitleChangeGrammarUrl"
        android:textSize="@dimen/textSize2" />

    <TextView
        android:id="@+id/itemAppId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemAppName"
        android:gravity="end"
        android:maxLines="1"
        android:textSize="@dimen/textSize2"
        android:visibility="gone" />

    <TextView
        android:id="@+id/itemAppCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="2dp"
        android:text="@string/defaultRecordingRate"
        android:textSize="@dimen/textSize2" />

    <TextView
        android:id="@+id/itemAppGrammarTargetLang"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemAppFname"
        android:text="@string/labelActivityEncoderListDemo"
        android:textColor="@color/green1"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/itemAppGrammar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemAppGrammarTargetLang"
        android:ellipsize="middle"
        android:maxLines="1"
        android:text="@string/keyWsServer"
        android:textColor="@color/orange1"
        android:textSize="@dimen/textSize2" />

    <TextView
        android:id="@+id/itemAppServer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemAppGrammar"
        android:text="@string/defaultHttpServer"
        android:textColor="@color/orange"
        android:textSize="@dimen/textSize2" />

</RelativeLayout>